--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
-    "framer-motion": "^12.0.0-alpha.1",
+    "framer-motion": "^11.16.1",
     "next": "15.1.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
