Finished some changes, updated resume button, updated tech stack, and small details

--- a/data/projects.json
+++ b/data/projects.json
@@ -1,7 +1,7 @@
 [
     {
         "thumbnail": "/personal_portfolio_thumbnail.png",
-        "title": "Personal Porfolio",
+        "title": "Personal Portfolio",
         "link": {
             "label": "Personal Portfolio",
             "url": "https://github.com/Duncan-Finlayson/duncan-portfolio"
